rename filepath dev to mnt

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,6 @@ hugoroot/resources/_gen/
 hugoroot/.hugo_build.lock
 
 # Obsidian Templates
-dev/sample-vault/Templates
-dev/sample-vault/.obsidian
-dev/sample-vault
+mnt/sample-vault/Templates
+mnt/sample-vault/.obsidian
+mnt/sample-vault
