--- a/hugoroot/config.toml
+++ b/hugoroot/config.toml
@@ -1,7 +1,7 @@
 # Basic config
-baseURL = "https://example.com"
+baseURL = "https://smaroukis.github.io"
 theme = "hugo-bearcub"
-copyright = "John Doe (CC BY 4.0)"
+copyright = "Spencer Maroukis (CC BY 4.0)"
 defaultContentLanguage = "en"
 
 # Generate a nice robots.txt for SEO
@@ -10,7 +10,7 @@ enableRobotsTXT = true
 # Your name. For more information on why this must be a list, see
 # https://discourse.gohugo.io/t/site-author-usage/31459/8
 [author]
-  name = "John Doe"
+  name = "Spencer Maroukis"
 
 # Setup syntax highlighting without inline styles. For more information about
 # why you'd want to avoid inline styles, see
@@ -28,21 +28,13 @@ enableRobotsTXT = true
 # see https://gohugo.io/content-management/multilingual/
 [languages]
   [languages.en]
-    title = "Bear Cub"
+    title = "TIL"
     languageName = "en-US 🇺🇸"
     LanguageCode = "en-US"
     contentDir = "content"
     [languages.en.params]
       blogPath = "blog" # Path to your blog section (used by RSS)
       madeWith = "Made with [Bear Cub](https://github.com/clente/hugo-bearcub)"
-  [languages.pt]
-    title = "Bear Cub"
-    languageName = "pt-BR 🇧🇷"
-    LanguageCode = "pt-BR"
-    contentDir = "content.pt"
-    [languages.pt.params]
-      blogPath = "blog" # Path to your blog section (used by RSS)
-      madeWith = "Feito com [Bear Cub](https://github.com/clente/hugo-bearcub)"
 
 [params]
   # The description of your website
@@ -59,7 +51,7 @@ enableRobotsTXT = true
 
   # This title is used as the site_name on the Hugo's internal opengraph
   # structured data template
-  title = "Bear Cub"
+  title = "Spencer's TILs"
 
   # Dates are displayed following the format below. For more information about
   # formatting, see https://gohugo.io/functions/format/
@@ -79,6 +71,4 @@ enableRobotsTXT = true
   # Social media. Delete any item you aren't using to make sure it won't show up
   # in your website's metadata.
   [social]
-    email = "me@example.com" # Added to the navbar so readers can reply to posts
-    twitter = "example" # Twitter handle (without '@')
-    facebook_admin = "0000000000" # Facebook Page Admin ID
+    twitter = "TODO" # Twitter handle (without '@')
